# claire

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES_SUMMARY.md  CITATION.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRAME_SELECTION_UPDATE.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  QUICK_START.md  README.md  Sato_NM_CLAIRE_v21.md  USAGE_GUIDE.md  __init__.py  calculate_manuscript_statistics.py  compare_systems.py  config.py  fix_run_analysis.patch  make_figure4_chain.py  make_figure_validation.py  paper.bib  paper.md  pyproject.toml  pyproject_original.toml  requirements-dev.txt  requirements.txt  run_analyze.py  run_claire.py  run_extract.py  run_temporal.py  setup.py  validate_temporal_v11.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  release.yml
analysis/: __init__.py  bulk_composition.py  causal_inference.py  composition.py  microscopy_prediction.py  ml_predict.py  ml_timeseries.py  run_timeseries_ml.py  spatial.py  temporal.py  temporal_causal.py
claire/: __init__.py  __version__.py  cli.py  config.py  improved_metrics.py  run_analysis.py
claire/analysis/: __init__.py  conservation.py  temporal.py  (+5 more)
core/: __init__.py  frame_processor.py  trajectory_loader.py
scripts/: organize2.sh  organize_claire.sh  replace_yoshida_to_sato.sh
test_data/: .test_trajectory.xtc_offsets.npz  README.md
tests/: test_analysis.py  test_import.py
utils/: __init__.py  parallel.py
visualization/: __init__.py  plots.py  plots_bulk.py  plots_causal.py  plots_microscopy.py  plots_radial_new.py  plots_target_position.py  plots_timeseries.py
(+14 files in other folders)
