[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claire-md"
version = "0.1.0"
description = "Conserved Lipid Analysis with Interaction and Redistribution Evaluation"
readme = "README.md"
authors = [
    {name = "Takeshi Sato"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "MDAnalysis>=2.0",
    "scikit-learn>=1.0",
    "tqdm>=4.60",
]

[project.urls]
Repository = "https://github.com/username/claire"

[project.scripts]
claire-analyze = "claire.run_analysis:main"

[tool.setuptools]
packages = ["claire"]